SSL/Group/Security tests (for jms, user/group info on jboss for human-task)